--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -64,9 +64,10 @@ p {
 @media (min-width: 992px) {
     .container-secciones {
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         gap: 60px;
+        margin-left: 60px;
     }
     .container-secciones__textos {
         display: flex;
