--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ a {
   text-decoration: none; }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   margin-bottom: 30px;
   text-align: center;
   font-family: "Zilla Slab", serif;
@@ -21,21 +21,21 @@ h2 {
   text-decoration: underline 5px #F9C80E; }
 
 p {
-  font-size: 2.2rem;
+  font-size: 1.8rem;
   line-height: 1.5;
   margin-bottom: 20px; }
 
 @media (min-width: 768px) {
   h2 {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     margin-bottom: 30px;
     text-align: center; }
   p {
-    font-size: 2.5rem; } }
+    font-size: 2rem; } }
 
 @media (min-width: 992px) {
   h2 {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     margin-bottom: 0;
     text-align: center; }
   p {
@@ -53,11 +53,9 @@ p {
 
 @media (min-width: 992px) {
   .container-secciones {
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 60px;
-    margin-left: 60px; }
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    align-items: baseline; }
   .container-secciones__textos {
     display: flex;
     flex-direction: column;
@@ -169,29 +167,66 @@ button {
 .servicios {
   background-color: #848586da; }
 
-#carouselExampleCaptions {
-  margin-top: 40px;
-  width: 400px;
+.carousel {
   height: 200px; }
 
-@media (min-width: 768px) {
-  #carouselExampleCaptions {
-    width: 200px;
-    height: 200px; } }
-
-.carousel-item
-img {
+.carousel .carousel-item > img {
   width: 150px;
   height: 150px; }
 
 @media (min-width: 768px) {
-  .carousel-item
-img {
-    width: 200px;
+  .carousel {
     height: 200px; } }
 
-.carousel-control-prev {
-  left: -30px; }
+#carousel-trabajos {
+  width: 100%;
+  height: 400px; }
 
-.carousel-control-next {
-  right: -30px; }
+@media (min-width: 992px) {
+  #carousel-trabajos {
+    height: 600px; } }
+
+.img-portfolio {
+  max-width: 100%;
+  height: 200px; }
+
+@media (min-width: 992px) {
+  .img-portfolio {
+    width: 80%;
+    height: 600px; } }
+
+.card_proyectos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+.proyecto-nombre,
+.proyecto-techs {
+  text-align: center;
+  font-size: 2rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  margin-bottom: 10px; }
+
+.container-botones {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-bottom: 60px; }
+
+.boton-link {
+  background-color: #F9C80E;
+  border-radius: 20px;
+  margin-bottom: 20px; }
+
+.boton-link a {
+  color: #202030;
+  font-size: 1.6rem; }
+
+@media (min-width: 992px) {
+  .boton-link a {
+    font-size: 2rem; } }
+
+.boton-link a:hover {
+  color: unset; }
