--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -14,7 +14,7 @@ a {
 }
 
 h2 {
-    font-size: 3rem;
+    font-size: 2rem;
     margin-bottom: 30px;
     text-align: center;
     font-family: $titulos;
@@ -22,7 +22,7 @@ h2 {
     text-decoration: underline 5px $amarillo;
 }
 p {
-    font-size: 2.2rem;
+    font-size: 1.8rem;
     line-height: 1.5;
     margin-bottom: 20px;
 }
@@ -30,18 +30,18 @@ p {
 
 @media (min-width: 768px) {
     h2 {
-        font-size: 3.5rem;
+        font-size: 2.5rem;
         margin-bottom: 30px;
         text-align: center;
     }
     p {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 }
 
 @media (min-width: 992px) {
         h2 {
-            font-size: 4.5rem;
+            font-size: 3.5rem;
             margin-bottom: 0;
             text-align: center;
         }
@@ -63,11 +63,14 @@ p {
 
 @media (min-width: 992px) {
     .container-secciones {
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: center;
-        gap: 60px;
-        margin-left: 60px;
+        display: grid;
+        grid-template-columns: 1fr 4fr;
+        align-items: baseline;
+        // flex-direction: row;
+        // justify-content: space-evenly;
+        // align-items: baseline;
+        // gap: 60px;
+        // margin-left: 60px;
     }
     .container-secciones__textos {
         display: flex;
