--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -2,21 +2,23 @@
     background-color: #848586da;
 }
 
-.carousel {
+.carousel-tech {
     height: 200px;
 }
-.carousel .carousel-item>img {
+.carousel-tech .carousel-item>img {
         width: 150px;
         height: 150px;
     }
 @media (min-width: 768px) {
-    .carousel {
+    .carousel-tech {
         height: 200px;
     }
 }
-// @media (min-width: 768px) {
-//     .carousel-item
-//     img {
-//         width: 200px;
-//     }
-// }
+.btn-floating {
+    background-color: unset;
+    box-shadow: none;
+}
+
+.btn-floating:hover {
+    background-color: unset;
+}
