--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,6 +4,7 @@ $negro: #202030;
 $blanco: #F7F7FF;
 $verde: #26532B;
 $gris: #848586;
+$gris-opaco: #848586b4;
 
 /*FUENTES*/
 $titulos: 'Zilla Slab', serif;
