--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -30,12 +30,12 @@ p {
 
 @media (min-width: 768px) {
     h2 {
-        font-size: 2.5rem;
+        font-size: 3rem;
         margin-bottom: 30px;
         text-align: center;
     }
     p {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
 }
 
@@ -66,11 +66,6 @@ p {
         display: grid;
         grid-template-columns: 1fr 4fr;
         align-items: baseline;
-        // flex-direction: row;
-        // justify-content: space-evenly;
-        // align-items: baseline;
-        // gap: 60px;
-        // margin-left: 60px;
     }
     .container-secciones__textos {
         display: flex;
@@ -79,4 +74,8 @@ p {
         justify-content: center;
         
     }
+}
+
+.iconify {
+    font-size: 2.5rem;
 }
