--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -17,7 +17,13 @@ main {
     height: 400px;
     margin-bottom: 30px;
 }
-
+@media (min-width: 768px) {
+    .avatar {
+        width: 500px;
+        height: 500px;
+        margin-bottom: 0;
+    }
+}
 @media (min-width: 992px) {
     .avatar {
         width: 600px;
