--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ p {
     margin-bottom: 30px;
     text-align: center; }
   p {
-    font-size: 2.5rem; } }
+    font-size: 2.3rem; } }
 
 @media (min-width: 992px) {
   h2 {
@@ -43,7 +43,11 @@ p {
 
 .padding-section {
   width: 100%;
-  padding: 50px; }
+  padding: 30px; }
+
+@media (min-width: 992px) {
+  .padding-section {
+    padding: 50px; } }
 
 .container-secciones {
   display: flex;
@@ -62,6 +66,12 @@ p {
     align-items: center;
     justify-content: center; } }
 
+.fondo-blanco {
+  background-color: #F7F7FF; }
+
+.fondo-gris {
+  background-color: #848586da; }
+
 .iconify {
   font-size: 2.5rem; }
 
@@ -75,9 +85,6 @@ nav {
   font-size: 2rem;
   color: #202030;
   font-family: "Roboto", sans-serif; }
-
-.enlaces:hover {
-  background-color: #F9C80E; }
 
 .sidenav {
   width: 200px; }
@@ -157,13 +164,15 @@ h1 {
 button {
   background-color: #F7F7FF;
   border: none;
-  padding: 10px 20px;
-  margin-bottom: 40px; }
+  margin-bottom: 40px;
+  border-radius: 20px; }
   button a {
+    display: block;
     color: #202030;
     font-family: "Roboto", sans-serif;
     font-size: 1.8rem;
-    font-weight: 700; }
+    font-weight: 700;
+    padding: 10px 20px; }
   button a:hover {
     color: #26532B;
     text-decoration: none; }
@@ -171,12 +180,6 @@ button {
 @media (min-width: 992px) {
   button {
     margin-bottom: 0; } }
-
-.sobre-mi {
-  background-color: #F7F7FF; }
-
-.servicios {
-  background-color: #848586da; }
 
 .carousel-tech {
   height: 200px; }
@@ -245,7 +248,9 @@ button {
   background-position: center center; }
 
 .slider .slides li .caption {
-  background-color: #848586b4; }
+  background-color: #848586b4;
+  left: 0;
+  width: 100%; }
 
 .botones-contacto {
   display: flex;
@@ -267,3 +272,13 @@ button {
 
 .botones-contacto button:last-child {
   margin-bottom: 0; }
+
+.subir {
+  display: flex;
+  background-color: #F9C80E;
+  padding: 10px;
+  border-radius: 50%; }
+
+.subir .flecha {
+  font-size: 3rem;
+  color: #202030; }
