--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -35,7 +35,7 @@ p {
         text-align: center;
     }
     p {
-        font-size: 2.5rem;
+        font-size: 2.3rem;
     }
 }
 
@@ -51,9 +51,13 @@ p {
 }
 .padding-section {
     width: 100%;
-    padding: 50px;
+    padding: 30px;
 }
-
+@media (min-width: 992px) {
+    .padding-section {
+        padding: 50px;
+    }
+}
 .container-secciones {
     display: flex;
     flex-direction: column;
@@ -75,7 +79,13 @@ p {
         
     }
 }
-
+.fondo-blanco {
+    background-color: $blanco;
+}
+.fondo-gris {
+        background-color: #848586da;
+    }
+    
 .iconify {
     font-size: 2.5rem;
 }
