--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -69,17 +69,18 @@ h1 {
         margin-top: -20px;
     }    
 }
-
 button {
     background-color: $blanco;
     border: none;
-    padding: 10px 20px;
     margin-bottom: 40px;
+    border-radius: 20px;
     a {
+        display: block;
         color: $negro;
         font-family: $parrafos;
         font-size: 1.8rem;
         font-weight: 700;
+        padding: 10px 20px;
     }
     a:hover {
         color: $verde;
