--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -1,3 +1,16 @@
+
+$amarillo: #F9C80E;
+$negro: #202030;
+$blanco: #F7F7FF;
+$verde: #26532B;
+$gris: #848586;
+$gris-opaco: #848586b4;
+
+
+$titulos: 'Zilla Slab', serif;
+$parrafos: 'Roboto', sans-serif;
+
+
 html {
     font-size: 62.5%;
     box-sizing: border-box;
@@ -49,6 +62,7 @@ p {
             font-size: 3rem;
         }
 }
+
 .padding-section {
     width: 100%;
     padding: 30px;
