--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,8 +1,5 @@
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @extend %flex-columnCentrado;
     background-color: $amarillo;
     margin-top: 57px;
 }
@@ -13,29 +10,23 @@ main {
     }
 }
 .avatar {
-    width: 400px;
-    height: 400px;
+    @extend %size-s;
     margin-bottom: 30px;
 }
 @media (min-width: 768px) {
     .avatar {
-        width: 500px;
-        height: 500px;
+        @include size-m;
         margin-bottom: 0;
     }
 }
 @media (min-width: 992px) {
     .avatar {
-        width: 600px;
-        height: 600px;
+        @include size-l;
         margin-bottom: 0;
     }
 }
 .texto-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @extend %flex-columnCentrado;
 }
 @media (min-width: 992px) {
     .texto-main {
@@ -81,12 +72,12 @@ button {
         font-size: 1.8rem;
         font-weight: 700;
         padding: 10px 20px;
+
+        &:hover {
+            color: $verde;
+            text-decoration: none;
+        }
     }
-    a:hover {
-        color: $verde;
-        text-decoration: none;
-    }
-    
 }
 @media (min-width: 992px) {
     button {
