--- a/scss/_proyectos.scss
+++ b/scss/_proyectos.scss
@@ -13,8 +13,11 @@
     font-size: 1.6rem;
     font-family: $parrafos;
     font-weight: 700;
+    width: 100%;
     margin-bottom: 10px;
+    background-color: $gris-opaco;
     color: $blanco;
+    padding: 10px;
 }
 @media (min-width: 992px) {
     .proyecto-nombre,
@@ -55,7 +58,10 @@
 }
 
 .slider .slides li .caption {
+    @extend %flex-columnCentrado;
     background-color: $gris-opaco;
+    top: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
 }
