--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -9,6 +9,7 @@
 }
 .botones-contacto button {
     margin-bottom: 20px;
+    background-color: $amarillo;
 }
 @media (min-width: 768px) {
     .botones-contacto button {
