--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,6 @@
 footer {
+    margin: 0;
+    padding: 20px 0;
     p {
         text-align: center;
     }
@@ -6,4 +8,6 @@ footer {
     a {
         color: $negro;
     }
-} 
+}
+
+
