--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ p {
   font-size: 2.5rem;
 }
 
-.botones-contacto, .slider .slides li .caption, .texto-main, main {
+.botones-contacto, .card-proyectos, .texto-main, main {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -241,14 +241,32 @@ button a:hover {
   background-color: unset;
 }
 
-.slider {
-  z-index: 0;
+#container-proyectos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.slider .slides li img {
-  height: 600px;
+@media (min-width: 992px) {
+  #container-proyectos {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+.card-proyectos {
+  margin-bottom: 30px;
+}
+.card-proyectos:last-of-type {
+  margin-bottom: 0;
 }
 
+@media (min-width: 992px) {
+  .card-proyectos:last-of-type {
+    margin: 0 auto;
+  }
+}
 .proyecto-nombre,
 .proyecto-techs {
   text-align: center;
@@ -256,10 +274,8 @@ button a:hover {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   width: 100%;
-  margin-bottom: 10px;
-  background-color: #848586b4;
-  color: #F7F7FF;
-  padding: 10px;
+  margin-bottom: 20px;
+  color: #202030;
 }
 
 @media (min-width: 992px) {
@@ -268,17 +284,10 @@ button a:hover {
     font-size: 2rem;
   }
 }
-.container-botones {
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-  margin-bottom: 20px;
-}
-
 .boton-link {
   background-color: #F9C80E;
   border-radius: 20px;
-  margin-bottom: 0;
+  margin-top: 20px;
 }
 
 .boton-link a {
@@ -295,22 +304,17 @@ button a:hover {
   color: unset;
 }
 
-.slider .slides li {
-  top: unset;
+.img-portfolio {
+  width: 450px;
+  height: 250px;
 }
 
-.slider .slides li img {
-  background-position: center center;
+@media (min-width: 1200px) {
+  .img-portfolio {
+    width: 500px;
+    height: 300px;
+  }
 }
-
-.slider .slides li .caption {
-  background-color: #848586b4;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-}
-
 .testimonios {
   display: flex;
 }
