--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ p {
   }
 
   p {
-    font-size: 2.3rem;
+    font-size: 2rem;
   }
 }
 @media (min-width: 992px) {
@@ -47,7 +47,7 @@ p {
   }
 
   p {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 }
 .padding-section {
@@ -91,6 +91,18 @@ p {
 
 .iconify {
   font-size: 2.5rem;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #848586b4;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #F9C80E;
 }
 
 .botones-contacto, .card-proyectos, .texto-main, main {
