--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -48,7 +48,7 @@ p {
         text-align: center;
     }
     p {
-        font-size: 2.3rem;
+        font-size: 2rem;
     }
 }
 
@@ -59,7 +59,7 @@ p {
             text-align: center;
         }
         p {
-            font-size: 3rem;
+            font-size: 2.5rem;
         }
 }
 
@@ -101,4 +101,16 @@ p {
     
 .iconify {
     font-size: 2.5rem;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: $gris-opaco;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: $amarillo;
 }
