--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ h2 {
   text-align: center;
   font-family: "Zilla Slab", serif;
   color: #202030;
-  text-decoration: underline 5px #F9C80E;
+  text-decoration: underline 5px #f9c610;
 }
 
 p {
@@ -86,7 +86,7 @@ p {
 }
 
 .fondo-gris {
-  background-color: #848586da;
+  background-color: rgba(132, 133, 134, 0.8549019608);
 }
 
 .iconify {
@@ -98,14 +98,14 @@ p {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #848586b4;
+  background-color: rgba(132, 133, 134, 0.7058823529);
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #F9C80E;
+  background-color: #f9c610;
 }
 
-.botones-contacto, .card-proyectos, .texto-main, main {
+form, .botones-contacto, .container-secciones__textos-contacto, .card-proyectos, .texto-main, main {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -144,7 +144,7 @@ nav {
 }
 
 main {
-  background-color: #F9C80E;
+  background-color: #f9c610;
   margin-top: 57px;
 }
 
@@ -209,7 +209,6 @@ h1 {
 button {
   background-color: #F7F7FF;
   border: none;
-  margin-bottom: 40px;
   border-radius: 20px;
 }
 button a {
@@ -228,6 +227,19 @@ button a:hover {
 @media (min-width: 992px) {
   button {
     margin-bottom: 0;
+  }
+}
+.container-botones_cv {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 40px;
+}
+
+@media (min-width: 1080px) {
+  .container-botones_cv {
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
 .carousel-tech {
@@ -303,7 +315,7 @@ button a:hover {
 }
 
 .boton-link {
-  background-color: #F9C80E;
+  background-color: #f9c610;
   border-radius: 20px;
   margin-top: 20px;
 }
@@ -372,7 +384,7 @@ q {
 }
 .botones-contacto button {
   margin-bottom: 20px;
-  background-color: #F9C80E;
+  background-color: #f9c610;
 }
 
 @media (min-width: 768px) {
@@ -386,7 +398,7 @@ q {
 
 .subir {
   display: flex;
-  background-color: #F9C80E;
+  background-color: #f9c610;
   padding: 10px;
   border-radius: 50%;
 }
@@ -394,6 +406,50 @@ q {
 .subir .flecha {
   font-size: 3rem;
   color: #202030;
+}
+
+form {
+  width: 50%;
+}
+
+form label {
+  font-size: 18px;
+}
+
+form input {
+  margin-top: 10px;
+}
+
+textarea {
+  width: 100%;
+  height: 200px;
+}
+
+::placeholder {
+  font-size: 14px;
+}
+
+input:not([type]):focus:not([readonly]) + label, input[type=text]:not(.browser-default):focus:not([readonly]) + label, input[type=password]:not(.browser-default):focus:not([readonly]) + label, input[type=email]:not(.browser-default):focus:not([readonly]) + label, input[type=url]:not(.browser-default):focus:not([readonly]) + label, input[type=time]:not(.browser-default):focus:not([readonly]) + label, input[type=date]:not(.browser-default):focus:not([readonly]) + label, input[type=datetime]:not(.browser-default):focus:not([readonly]) + label, input[type=datetime-local]:not(.browser-default):focus:not([readonly]) + label, input[type=tel]:not(.browser-default):focus:not([readonly]) + label, input[type=number]:not(.browser-default):focus:not([readonly]) + label, input[type=search]:not(.browser-default):focus:not([readonly]) + label, textarea.materialize-textarea:focus:not([readonly]) + label {
+  color: #9e9e9e;
+}
+
+input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):focus:not([readonly]), input[type=password]:not(.browser-default):focus:not([readonly]), input[type=email]:not(.browser-default):focus:not([readonly]), input[type=url]:not(.browser-default):focus:not([readonly]), input[type=time]:not(.browser-default):focus:not([readonly]), input[type=date]:not(.browser-default):focus:not([readonly]), input[type=datetime]:not(.browser-default):focus:not([readonly]), input[type=datetime-local]:not(.browser-default):focus:not([readonly]), input[type=tel]:not(.browser-default):focus:not([readonly]), input[type=number]:not(.browser-default):focus:not([readonly]), input[type=search]:not(.browser-default):focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #000;
+  box-shadow: unset;
+}
+
+.botones-form {
+  display: flex;
+  margin-top: 10px;
+  gap: 10px;
+}
+
+.botones-form button {
+  background-color: #f9c610;
+  padding: 10px 20px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 footer {
