--- a/css/styles.css
+++ b/css/styles.css
@@ -409,9 +409,19 @@ q {
 }
 
 form {
-  width: 50%;
+  width: 100%;
 }
 
+@media (min-width: 768px) {
+  form {
+    width: 80%;
+  }
+}
+@media (min-width: 992px) {
+  form {
+    width: 50%;
+  }
+}
 form label {
   font-size: 18px;
 }
