--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -37,7 +37,19 @@
 
 form {
     @extend %flex-columnCentrado;
-    width: 50%;
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    form {
+        width: 80%;
+    }
+}
+
+@media (min-width: 992px) {
+    form {
+        width: 50%;
+    }
 }
 
 form label {
