--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -1,6 +1,6 @@
 
-$amarillo: #f9c610;
-$negro: #202030;
+$principal: #f9c610;
+$secundario: #202030;
 $blanco: #F7F7FF;
 $verde: #26532B;
 $gris: #848586;
@@ -31,8 +31,8 @@ h2 {
     margin-bottom: 30px;
     text-align: center;
     font-family: $titulos;
-    color: $negro;
-    text-decoration: underline 5px $amarillo;
+    color: $secundario;
+    text-decoration: underline 5px $principal;
 }
 p {
     font-size: 1.8rem;
@@ -112,5 +112,5 @@ p {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: $amarillo;
+    background-color: $principal;
 }
