--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,14 +6,14 @@ nav {
 }
 .enlaces {
     font-size: 2rem;
-    color: $negro;
+    color: $secundario;
     font-family: $parrafos;
 }
 .sidenav {
     width: 200px;
 }
 .sidenav-trigger {
-    color: $negro;
+    color: $secundario;
 }
 .contenedor-enlaces {
     display: flex;
