--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -97,3 +97,8 @@ button {
         justify-content: space-between;
     }
 }
+
+.coderhouse {
+    color: $secundario;
+    text-decoration: underline;
+}
