--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,7 @@ p {
 }
 
 .iconify {
-  font-size: 2.5rem;
+  font-size: 1.8rem;
 }
 
 ::-webkit-scrollbar {
@@ -141,6 +141,19 @@ nav {
 .contenedor-enlaces {
   display: flex;
   justify-content: space-around;
+}
+
+.redes_lg {
+  display: none;
+}
+
+@media (min-width: 480px) {
+  .redes_lg {
+    display: flex;
+  }
+}
+.material-icons svg {
+  font-size: 2.5rem;
 }
 
 main {
