--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -19,3 +19,17 @@ nav {
     display: flex;
     justify-content: space-around;
 }
+
+.redes_lg {
+    display: none;
+}
+
+@media (min-width: 480px) {
+    .redes_lg {
+        display: flex;
+    }
+}
+
+.material-icons svg {
+    font-size: 2.5rem;
+}
