--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -41,13 +41,13 @@ h1 {
     font-weight: 100;
     font-style: italic;
     font-size: 3rem;
-    margin-top: -15px;
+    margin-top: 0;
     color: $blanco;
 }
 @media (min-width: 992px) {
     .parrafo-main {
         font-size: 4rem;
-        margin-top: -20px;
+        margin-top: 0;
     }    
 }
 button {
