--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ p {
   font-size: 1.8rem;
 }
 
-form, .botones-contacto, .container-secciones__textos-contacto, .card-proyectos, .banner, .banner-techs, .texto-main, main {
+form, .botones-contacto, .container-secciones__textos-contacto, .card-proyectos, .banner, .texto-main, main {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -249,19 +249,19 @@ button a:hover {
 }
 
 .banner-techs {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 10px;
 }
 
 @media (min-width: 768px) {
   .banner-techs {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
   }
 }
 @media (min-width: 992px) {
   .banner-techs {
-    display: grid;
     grid-template-columns: repeat(4, 1fr);
     align-items: center;
     gap: 30px;
