--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -1,11 +1,11 @@
 .banner-techs {
-    @extend %flex-columnCentrado;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
 }
 
 @media (min-width: 768px) {
     .banner-techs {
-        display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 30px;
     }
@@ -13,7 +13,6 @@
 
 @media (min-width: 992px) {
     .banner-techs {
-        display: grid;
         grid-template-columns: repeat(4, 1fr);
         align-items: center;
         gap: 30px;
